--- a/cliente/src/components/stylesheets/login.css
+++ b/cliente/src/components/stylesheets/login.css
@@ -94,3 +94,45 @@
   color: #f39c12;
   font-weight: bold;
 }
+
+
+
+/* CSS splash */
+
+/*.splash{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #E9750B;
+  z-index: 200;
+  color: black;
+  text-align: center;
+  line-height: 90vh;
+}
+
+.display-none{
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  z-index: -10;
+  color: white;
+  text-align: center;
+  line-height: 90vh;
+}
+
+@keyframes fadeIn{
+  to{
+    opacity: 1;
+  }
+}
+
+.fade-in{
+  opacity: 0;
+  animation: fadeIn 1s ease-in forwards;
+}*/
